// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Filter Amenities 1`] = `
<div
  className="filter"
>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Community Centers
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Trails
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Parks
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Federal Lands
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Golf Courses
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Ski Areas
    </label>
  </div>
</div>
`;

exports[`Storyshots Filter Economic Development 1`] = `
<div
  className="filter"
>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Opportunity Zones
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Centers
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      General Land Use
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Economic Clusters
    </label>
  </div>
</div>
`;

exports[`Storyshots Filter Land Uses 1`] = `
<div
  className="filter"
>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        2050 Data
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            name="props.label"
            onChange={[Function]}
            type="radio"
          />
          Employment Projections
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={false}
            className="form-check-input"
            name="props.label"
            onChange={[Function]}
            type="radio"
          />
          Population Projections
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={false}
            className="form-check-input"
            name="props.label"
            onChange={[Function]}
            type="radio"
          />
          Workplace Accessibility - Auto
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={false}
            className="form-check-input"
            name="props.label"
            onChange={[Function]}
            type="radio"
          />
          Workplace Accessibility - Transit
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Land Use
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Centers
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          General Land Use
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Filter Transportation 1`] = `
<div
  className="filter"
>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Project Modes
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Roads
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Transit
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Bike/Ped
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Phasing (colors)
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Phase 1 (2019-30)
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Phase 2 (2031-40)
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Phase 3 (2041-50)
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Unfunded Needs
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Land Use (filter by phasing)
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Centers
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          General Land Use
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Other
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Existing Bike/Ped
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Existing Transit
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Filter Vision 1`] = `
<div
  className="filter"
>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Transportation
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Roads
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Transit
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Bike/Ped
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Land Use
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Centers
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          General Land Use
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Symbols PolygonClasses 1`] = `
<div
  className="polygon-symbol-container"
>
  <div
    className="polygon-class-container"
  />
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-question-circle fa-w-16 "
    data-icon="question-circle"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;
